add command for using reservation

--- a/Day1/pretraining-with-nemo-on-gke/nemo-on-k8s/helm-context/templates/nemo-example.yaml
+++ b/Day1/pretraining-with-nemo-on-gke/nemo-on-k8s/helm-context/templates/nemo-example.yaml
@@ -11,7 +11,7 @@ metadata:
   name: "{{ .Release.Name }}" 
 data:
   nemo-configuration.yaml: |-
-{{ .Files.Get "llama2-7b.yaml" | nindent 4 }}
+{{ .Files.Get "llama2-7b-fp8.yaml" | nindent 4 }}
 ---
 apiVersion: v1
 kind: Service
