--- a/Day1/pretraining-with-nemo-on-gke/nemo-on-k8s/helm-context/values.yaml
+++ b/Day1/pretraining-with-nemo-on-gke/nemo-on-k8s/helm-context/values.yaml
@@ -15,17 +15,18 @@ volumes:
   #   - bucketName: "mhvictorhau" #"gs://mhvictorhau/mixtral8x7b"
   #     mountPath: "/gcs"
 
-gcsDownload: # downloads or synchronizes contents of a GCS bucket folder on initialization
-  source: "gs://injae-download/megatron-lm/wikipedia/" 
-  #source: "gs://nemo-megatron-demo/training-data/tokenized/sentencepiece-llama2/wikipedia" 
-  target: "/ssd/.cache/"
+#gcsDownload: # downloads or synchronizes contents of a GCS bucket folder on initialization
+#  source: "gs://injae-download/megatron-lm/wikipedia/" 
+#  #source: "gs://nemo-megatron-demo/training-data/tokenized/sentencepiece-llama2/wikipedia" 
+#  target: "/ssd/.cache/"
 
 workload:
-  image: "us-central1-docker.pkg.dev/injae-sandbox-340804/a3-bootcamp-labs/nemofw-tcpxo:dev" #"us-central1-docker.pkg.dev/supercomputer-testing/sufkha-nemo-demo-test/nemo-benchmarks-v3:24.03.01.framework"
-  torchDistributedTarget: "/opt/NeMo/nemo/collections/nlp/models/language_modeling/megatron_gpt_model.py"
+  image: "us-central1-docker.pkg.dev/injae-sandbox-340804/a3-bootcamp-labs/nemofw-tcpxo:24.05.llama3.1"
+  torchDistributedTarget: "/opt/NeMo/examples/nlp/language_modeling/megatron_gpt_pretraining.py"
+  #torchDistributedTarget: "/opt/NeMo/nemo/collections/nlp/models/language_modeling/megatron_gpt_model.py"
 
   # It will be mounted to /nfs on container startup using GCS fuse
-  gcsBucketForDataCataPath: elm-benchmark
+  #gcsBucketForDataCataPath: elm-benchmark
 
   gpus: 16 # This should be one of: {<= 8,  multiple of 8}
   arguments:
@@ -34,10 +35,10 @@ workload:
     value: "/nemo-experiments/results" 
   - name: "exp_manager.exp_dir"
     value: "/nemo-experiments/"
-  - name: "model.data.data_prefix"
-    value: "[1.0,/ssd/.cache/wikipedia-tokenized-for-gpt2]"
-  - name: "model.data.index_mapping_dir"
-    value: "/gcs/index_mapping_dir"
+  #- name: "model.data.data_prefix"
+  #  value: "[1.0,/ssd/.cache/wikipedia-tokenized-for-gpt2]"
+  #- name: "model.data.index_mapping_dir"
+  #  value: "/gcs/index_mapping_dir"
 #  - name: "model.data.data_prefix"
 #    value: "[1.0,/ssd/.cache/wikipedia-tokenized-for-llama2]"    
 #  - name: "model.tokenizer.model"
@@ -55,10 +56,10 @@ network:
     
 
   ncclSettings:
-  - name: TRAINING_FILENAME
-    value: "mixtral-8x7b-nvidia-configs.yaml" #"llama2-7b.yaml"
-  - name: IMAGE_VERSION
-    value: "24.05" #"24.03.01.framework"
+  #- name: TRAINING_FILENAME
+  #  value: "mixtral-8x7b-nvidia-configs.yaml" #"llama2-7b.yaml"
+  #- name: IMAGE_VERSION
+  #  value: "24.05" #"24.03.01.framework"
     
   - name: NCCL_DEBUG
     value: "VERSION"
